--- a/src/core/client/admin/routes/Moderate/SiteSelector/SiteSelector.css
+++ b/src/core/client/admin/routes/Moderate/SiteSelector/SiteSelector.css
@@ -3,6 +3,6 @@
 }
 
 .buttonText {
-  overflow-x: hidden;
+  overflow: hidden;
   text-overflow: ellipsis;
 }
